--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="나만의 감정 일기장" />
+
+    <meta property="og:image" content="%PUBLIC_URL%/thumbanil.png" />
+    <meta property="og:site_name" content="감정 일기장" />
+    <meta property="og:description" content="나만의 작은 감정 일기장" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
